# KES-for-Zotero

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  test.py
scripts/: diagnose_marker_parse.py
src/kes_for_zotero/: __init__.py  __main__.py  cli.py  config.py  healthcheck.py  markdown_writer.py  marker_pipeline.py  models.py  pipeline.py  vision_llm.py  zotero_storage.py
tests/: test_markdown_writer.py  test_pipeline_and_marker.py  test_zotero_storage.py
